--- a/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
@@ -35,32 +35,61 @@
                 <!-- Asset Browser Search -->
                 <Grid Grid.Row="0" Margin="3" >
 
+                    <Grid.Resources>
+                        <ResourceDictionary>
+                            <ResourceDictionary.MergedDictionaries>
+                                <hc:ThemeResources />
+                                <hc:Theme />
+                            </ResourceDictionary.MergedDictionaries>
+                        </ResourceDictionary>
+                    </Grid.Resources>
+
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    
+
                     <hc:SearchBar Grid.Column="0"
                                   x:Name="FileSearchBar"
-                                  Style="{StaticResource SearchBarPlus}"
                                   VerticalAlignment="Top"
                                   FlowDirection="LeftToRight"
-                                  ShowClearButton="True"
-                                  hc:InfoElement.Placeholder="Search all game files"
+                                  ShowClearButton="False"
+                                  hc:InfoElement.Placeholder="(e.g. judy kind:mesh,ent)"
                                   hc:InfoElement.Title="Search all game files: "
                                   hc:InfoElement.TitlePlacement="Left"
                                   >
                     </hc:SearchBar>
-                    <hc:SearchBar  Grid.Column="1" Margin="10,0,0,0"
+
+                    <Viewbox Grid.Column="1"  Margin="-35,0,0,0" Height="30" Width="30" >
+                        <ToggleButton IsChecked="{Binding IsRegexSearchEnabled}" >
+
+                            <ToggleButton.Style>
+                                <Style TargetType="ToggleButton" BasedOn="{StaticResource {x:Type ToggleButton}}">
+                                    <Style.Triggers>
+                                        <Trigger Property="IsChecked" Value="True">
+                                            <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.Accent}" />
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </ToggleButton.Style>
+
+                            <iconPacks:PackIconCodicons Kind="Regex" />
+                            
+                        </ToggleButton>
+                    </Viewbox>
+                    
+                    <hc:SearchBar  Grid.Column="2" Margin="10,0,0,0"
                                   x:Name="OptionsSearchBar"
                                   Style="{StaticResource SearchBarPlus}"
                                   VerticalAlignment="Top"
                                   FlowDirection="LeftToRight"
                                   ShowClearButton="True"
                                   hc:InfoElement.Placeholder="(e.g. *.ent, base/**/judy)"
-                                  hc:InfoElement.Title="Globbin' for WopsS: "
+                                  hc:InfoElement.Title="files to include: "
                                   hc:InfoElement.TitlePlacement="Left"
                                   >
+                       
                     </hc:SearchBar>
 
                 </Grid>
@@ -102,7 +131,7 @@
                                 BorderBrush="{DynamicResource BorderBrush}"
                                 FlowDirection="LeftToRight"
                                 hc:InfoElement.Placeholder="Search"
-                                Style="{StaticResource SearchBarExtend}"
+                                Style="{StaticResource SearchBarPlus}"
                                 hc:InfoElement.Necessary="True"
                                 SearchStarted="FolderSearchBar_OnSearchStarted"
                                 ShowClearButton="True"
@@ -110,7 +139,7 @@
 
                             <Button Grid.Column="1"
                                 HorizontalAlignment="Right"
-                                VerticalAlignment="Top"
+                                VerticalAlignment="Center"
                                 Background="{DynamicResource ContentBackground}"
                                 Click="LeftNavigationHomeButton_OnClick"
                                 Visibility="Visible">
@@ -281,6 +310,7 @@
                                 </syncfusion:SfDataGrid.RecordContextMenu>
 
                                 <syncfusion:SfDataGrid.Resources>
+                                    
                                     <Style TargetType="syncfusion:GridHeaderCellControl">
                                         <Setter Property="BorderThickness" Value="0,0,0,1" />
                                         <Setter Property="BorderBrush" Value="{DynamicResource SecondaryRegionBrush}" />
@@ -290,7 +320,12 @@
                                     </Style>
 
                                     <converters1:ExtensionToBitmapConverter x:Key="ExtensionToBmp" />
-                                </syncfusion:SfDataGrid.Resources>
+
+                                <DataTemplate x:Key="TemplateToolTip">
+                                    <TextBlock Text="{Binding FullName}" />
+                                </DataTemplate>
+
+                            </syncfusion:SfDataGrid.Resources>
 
                                 <syncfusion:SfDataGrid.Columns>
 
@@ -988,7 +1023,9 @@
                                         AllowFiltering="True"
                                         ColumnSizer="Star"
                                         IsReadOnly="True"
-                                        MappingName="Name" />
+                                        MappingName="Name"
+                                        ShowToolTip="True" ToolTipTemplate="{StaticResource TemplateToolTip}"
+                                        />
 
                                     <syncfusion:GridTextColumn
                                         AllowFiltering="True"
