Asset Browser: go to file

--- a/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
@@ -162,7 +162,7 @@
                                 ColumnSizer="FillColumn"
                                 FilterLevel="Extended"
                                 SelectionChanged="LeftNavigation_OnSelectionChanged"
-                                
+                                ExpandStateMappingName="IsExpanded"
                             >
 
                             <syncfusion:SfTreeGrid.Resources>
