--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -9,15 +9,13 @@
     xmlns:fluent="urn:fluent-ribbon"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-    xmlns:local="clr-namespace:WolvenKit.Views.Editor"
-    xmlns:local1="clr-namespace:WolvenKit.ViewModels.Editor;assembly=WolvenKit.App"
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:others="clr-namespace:WolvenKit.Views.Others"
     xmlns:sfskin="clr-namespace:Syncfusion.SfSkinManager;assembly=Syncfusion.SfSkinManager.WPF"
     xmlns:shared="clr-namespace:Syncfusion.Windows.Shared;assembly=Syncfusion.Shared.WPF"
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
-    xmlns:views1="clr-namespace:WolvenKit.MVVM.Views.Shell.Backstage"
     xmlns:shell="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
+    xmlns:shell1="clr-namespace:WolvenKit.Views.Shell"
     Margin="0,33,0,0"
     Panel.ZIndex="-15">
 
@@ -1853,7 +1851,7 @@
                 <Grid>
 
                     <Grid Grid.Row="1">
-                        <views1:BackStageView />
+                        <shell1:BackStageView />
                     </Grid>
                 </Grid>
             </Border>
