--- a/WolvenKit/Views/Documents/TweakDocumentView.xaml
+++ b/WolvenKit/Views/Documents/TweakDocumentView.xaml
@@ -8,12 +8,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:local="clr-namespace:WolvenKit.Views.Documents"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:interactivity="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:system="clr-namespace:System;assembly=netstandard"
     xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
-    mc:Ignorable="d" 
+    mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance Type=documents:TweakDocumentViewModel}"
     d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}" Margin="3" >
@@ -35,6 +37,7 @@
 
         <!-- TEXT EDITOR -->
         <avalonEdit:TextEditor
+            Margin="5"
             ShowLineNumbers="True"
                     FontFamily="Consolas"
                     FontSize="10pt"
@@ -44,12 +47,48 @@
                     />
 
         <!-- TEXT EDITOR -->
-        <GridSplitter Width="5" Grid.Column="1" HorizontalAlignment="Stretch"/>
+        <syncfusion:SfGridSplitter Grid.Column="1" HorizontalAlignment="Stretch" />
 
         <!-- UI EDITOR -->
-        <Grid Grid.Column="2">
-            
-            
+        <Grid Grid.Column="2" Margin="5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0" Background="{DynamicResource BorderBrush}">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <hc:TextBox Grid.Column="0"
+                            Margin="10,0,0,0"
+                            x:Name="NameTextBox"
+                            hc:InfoElement.Title="Name: "
+                            hc:InfoElement.TitlePlacement="Left"/>
+                <hc:ComboBox Grid.Column="1"
+                             Margin="10,0,0,0"
+                             x:Name="TypeComboBox"
+                             hc:InfoElement.Title="Type: "
+                             hc:InfoElement.TitlePlacement="Left"
+                             ItemsSource="{Binding Types}"
+                             SelectedItem="{Binding SelectedType}"/>
+                <Button  Grid.Column="2" x:Name="AddButton">
+                    <iconPacks:PackIconMaterial Kind="Plus" Foreground="Green"/>
+                </Button>
+            </Grid>
+
+            <syncfusion:SfTreeGrid Grid.Row="1"
+                                   x:Name="FlatsTree"
+                                   ColumnSizer="FillColumn"
+                                   >
+
+                
+            </syncfusion:SfTreeGrid>
+
         </Grid>
         
     </Grid>
