--- a/WolvenKit/Views/Documents/TweakDocumentView.xaml
+++ b/WolvenKit/Views/Documents/TweakDocumentView.xaml
@@ -64,19 +64,33 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
                 <hc:TextBox Grid.Column="0"
                             Margin="10,0,0,0"
                             x:Name="NameTextBox"
                             hc:InfoElement.Title="Name: "
                             hc:InfoElement.TitlePlacement="Left"/>
                 <hc:ComboBox Grid.Column="1"
+                             Grid.ColumnSpan="2"
                              Margin="10,0,0,0"
                              x:Name="TypeComboBox"
                              hc:InfoElement.Title="Type: "
                              hc:InfoElement.TitlePlacement="Left"
                              ItemsSource="{Binding Types}"
                              SelectedItem="{Binding SelectedType}"/>
-                <Button  Grid.Column="2" x:Name="AddButton">
+                
+
+                <hc:TextBox Grid.Row="1"
+                            Grid.ColumnSpan="2"
+                            Margin="13,0,0,0"
+                            x:Name="ValueTextBox"
+                            hc:InfoElement.Title="Value: "
+                            hc:InfoElement.TitlePlacement="Left"/>
+                <Button Grid.Row="1" Grid.Column="2" x:Name="AddButton">
                     <iconPacks:PackIconMaterial Kind="Plus" Foreground="Green"/>
                 </Button>
             </Grid>
@@ -84,6 +98,7 @@
             <syncfusion:SfTreeGrid Grid.Row="1"
                                    x:Name="FlatsTree"
                                    ColumnSizer="FillColumn"
+                                   Margin="0,10,0,0"
                                    >
 
                 
