--- a/WolvenKit/Views/Documents/TweakDocumentView.xaml
+++ b/WolvenKit/Views/Documents/TweakDocumentView.xaml
@@ -99,9 +99,15 @@
                                    x:Name="FlatsTree"
                                    ColumnSizer="FillColumn"
                                    Margin="0,10,0,0"
+                                   AutoGenerateColumns="False"
                                    >
+                <syncfusion:SfTreeGrid.Columns>
+                    <syncfusion:TreeGridTextColumn MappingName="Name" />
+                    <syncfusion:TreeGridTextColumn MappingName="Value" />
+                </syncfusion:SfTreeGrid.Columns>
 
                 
+
             </syncfusion:SfTreeGrid>
 
         </Grid>
