--- a/WolvenKit/Views/Documents/TweakDocumentView.xaml
+++ b/WolvenKit/Views/Documents/TweakDocumentView.xaml
@@ -44,6 +44,7 @@
                     Name="textEditor"
                     Foreground="LightGray"
                     Document = "{Binding Document, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                    SyntaxHighlighting="JSON"
                     />
 
         <!-- TEXT EDITOR -->
