--- a/WolvenKit/Views/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Documents/DocumentView.xaml
@@ -16,7 +16,7 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance Type={x:Type documents:DocumentViewModel}}"
+    d:DataContext="{d:DesignInstance Type={x:Type documents:RedDocumentViewModel}}"
     >
 
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
@@ -486,7 +486,9 @@
                                     MappingName="IsSerialized"
                                     AllowEditing="true"
                                     HeaderText="Serialized"
-                                    ColumnSizer="SizeToHeader"/>
+                                    ColumnSizer="SizeToHeader"
+
+                                    />
 
                             </syncfusion:SfTreeGrid.Columns>
 
